# terminal-chat

./: README.md
client/: Cargo.toml  README.md
client/src/: connection.rs  main.rs  service.rs  settings.rs  state.rs  types.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs  messages_pool.rs  reader.rs  service.rs  settings.rs  state.rs  types.rs
server/src/managers/: data_manager.rs  manager.rs  mod.rs  stream_manager.rs  types.rs
