[package]
name = "cli-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
anyhow = "1.0"
parking_lot = "0.12.1"